# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
shd/: frag.glsl  vert.glsl
src/: color.h  coord.h  display.cpp  display.h  game.cpp  game.h  initialization.cpp  initialization.h  main.cpp  util.h
